input template to directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@ Main
 
 <button (click)='injectToken()'>Inject token</button>
 
-<app-second custom class="m-5"></app-second>
+<app-second custom [template]='tml' class="m-5"></app-second>
 
 <app-base-dir>
     <div third>From content</div>
